style: fix container alignment

--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
     font-size: 20px;
 }
 
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 #rock {
     background-color: white;
     color: black;
